--- a/css/main.scss
+++ b/css/main.scss
@@ -278,22 +278,17 @@ footer {
     margin-bottom: 1.7em !important;
   }
 
-  .nav-items ul li {
-    margin-left: 1em !important;
-    margin-right: 1em !important;
-  }
-
   .contact {
     .container {
       .form-container {
         min-width: 300px !important;
-        margin: 1em !important;
       }
 
       .map-container {
-        width: 300px !important;
-        margin-left: 3em !important;
-        margin-right: 3em !important;
+        min-width: 300px !important;
+        iframe {
+          min-width: 300px !important;
+        }
       }
     }
   }
